# bia-explorer

./: .gitignore  README.rst  pyproject.toml
bia_explorer/: api.py  biostudies.py  io.py  models.py  utils.py
data/: S-BIAD144.json  S-BIAD564.json  S-BIAD582.json
example_notebooks/: BIA-api-visualisation-notebook.ipynb  Explore_S-BIAD463_COCO_annotations.ipynb  Exploring images as Zarr arrays.ipynb  api_example_with_zarrs.ipynb
example_notebooks/api/: BIA-api-visualisation-notebook.ipynb  Example_use_bia_explorer.ipynb  Explore_S-BIAD463_COCO_annotations.ipynb  Loading-and-visualising-Zarr-data.ipynb  api_example_with_zarrs.ipynb
