[tool.poetry]
name = "bia-explorer"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.10.2"
Pillow = "^9.3.0"
bia-integrator-api = { git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "clients/python", branch = "ro_client_builder" }
dask = "^2024.4.1"
zarr = "^2.17.2"
matplotlib = "^3.8.4"
jupyter = "^1.0.0"
# Transitive dependeices from upstream projects,
#   useful to bound to make poetry install faster
aiobotocore = "^2.0.0"
s3fs = "^2024.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
