[tool.poetry]
name = "bia-explorer"
# managed by poetry-version-plugin
version = "0.1"
description = ""
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.10.2"
Pillow = "^9.3.0"
bia-integrator-api = "^0.3.0"
dask = "^2024.4.1"
zarr = "^2.17.2"
jupyter = "^1.0.0"
ome-zarr = "^0.8.3"
# Transitive dependeices from upstream projects,
#   useful to bound to make poetry install faster
aiobotocore = "^2.0.0"
s3fs = "^2024.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"
